stage4 add: tests, baidges, refactoring index.js

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,17 @@ language: node_js
 node_js:
   - node
 
+env:
+  global:
+    - CC_TEST_REPORTER_ID=57f182b3be9e588c11b5bcc6e0ead3fee322885e49263eab2d5cb8d969cca815
+
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
   - make lint
+  - make test-coverage
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
