--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend-project-lvl2",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "bin": {
     "gendiff": "dist/bin/gendiff.js"
   },
@@ -13,6 +13,7 @@
     "dist"
   ],
   "scripts": {
+    "test": "jest",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build"
   },
@@ -42,6 +43,7 @@
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.4.1",
     "jest": "^24.9.0"
   }
 }
