--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,19 @@ node_js:
 
 env:
   global:
-    - CC_TEST_REPORTER_ID=57f182b3be9e588c11b5bcc6e0ead3fee322885e49263eab2d5cb8d969cca815
+    - CC_TEST_REPORTER_ID=a8c5462cee7f866a2ea6f8da389007e2d5adef82d757d76fa5a8561338013798
 
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
+
 script:
   - make lint
   - make test-coverage
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+
+notifications:
+  email: false
